# QMAI

./: .gitignore  CLAUDE.md  COMMERCIALIZATION.md  README.md  package-lock.json  package.json  vite.config.ts  去AI味Skill规则.md
.github/workflows/: build.yml  ci.yml
GenxinLOG/: 20260610-072845-更新日志.md  20260611-075141-更新日志.md  20260611-完整更新日志.md  20260611-详细更新日志.md  v2.2.12-软件内置更新日志.md  更新日志.md
NvwaSKILL/: README.md
NvwaSKILL/examples/sun-yuchen-perspective/: README.md
scripts/: calibrate-review-weights.mjs  mock-refine-llm.mjs  prepare-github-release.mjs  release-notes.mjs  release-notes.spec.mjs  run-refine-acceptance.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  proxy.rs
src-tauri/src/commands/: claude_cli.rs  cli_resolver.rs  codex_cli.rs  fs.rs  local_cli_config.rs  mod.rs
src/components/chat/: chat-dock-controls.spec.tsx  chat-dock-controls.tsx  chat-input-resize.spec.ts  chat-input-resize.ts  chat-input.resize-interaction.spec.tsx  chat-input.tsx  chat-message.spec.tsx  chat-message.tsx  chat-panel.tsx  chat-resume.spec.ts  chat-resume.ts  deep-thinking-feature-tooltip.tsx  dismantling-reference.spec.ts  stream-session.spec.ts  stream-session.ts
src/components/dashboard/: dashboard-view.tsx
src/components/editor/: wiki-editor.immersive.spec.tsx  wiki-editor.tsx
src/components/generation/: generation-history-detail-view.tsx  generation-history-list-panel.tsx
src/components/layout/: app-layout.tsx  chat-bar.tsx  (+11 more)
src/i18n/: en.json  zh.json
src/lib/: analytics.ts  azure-openai.ts  changelog.spec.ts  changelog.ts  chat-copy-content.test.ts  chat-copy-content.ts  claude-cli-transport.ts  codex-cli-transport.ts  connection-tests.ts  dashboard-issue-actions.spec.ts  dashboard-issue-actions.test.ts  dashboard-issue-actions.ts  deep-thinking-stream.spec.ts  deep-thinking-stream.ts  embedding.ts  endpoint-normalizer.ts  env-llm-defaults.ts  feedback.ts  graph-relevance.spec.ts  graph-relevance.ts  llm-client.ts  llm-providers.spec.ts  llm-providers.ts  llm-usage-storage.ts  llm-usage.ts  local-cli-config.ts  novel-review-action-items.spec.ts  novel-review-action-items.ts  outline-save.spec.ts  outline-save.ts  project-storage-path.spec.ts  project-storage-path.ts  project-store.ts  reasoning-detector.spec.ts  reasoning-detector.ts  reset-project-state.ts  review-rewrite-plan.spec.ts  review-rewrite-plan.ts  settings-model-list.spec.ts  settings-model-list.ts  (+13 more)
src/stores/: chat-store.ts  import-progress-store.spec.ts  import-progress-store.ts  llm-usage-store.ts  outline-chat-store.ts  prompt-config-store.ts  wiki-store.ts
src/test-helpers/: load-test-env.ts
(+103 files in other folders)
